testemonial section end

--- a/index.html
+++ b/index.html
@@ -351,6 +351,155 @@
       </div>
     </div>
     <!-- skill section end here -->
+    <!-- Overview start here -->
+    <div class="container-fluid overview-main py-5">
+      <div class="container py-5">
+        <div class="row">
+          <div
+            class="col-md-4 d-flex align-items-center justify-content-center overview-content"
+          >
+            <div class=" ">
+              <i
+                class="fa-regular fa-user p-3 fs-2 rounded-4 overview-icon"
+              ></i>
+            </div>
+            <div class="pt-4 ps-5 overview-part-2">
+              <span class="overview-number">258+</span>
+              <p class="overview-text pt-3">Happy Clients</p>
+            </div>
+          </div>
+          <div
+            class="col-md-4 d-flex align-items-center justify-content-center overview-content"
+          >
+            <div class=" ">
+              <i class="fa-solid fa-gear p-3 fs-2 rounded-4 overview-icon"></i>
+            </div>
+            <div class="pt-4 ps-5 overview-part-2">
+              <span class="overview-number">590K</span>
+              <p class="overview-text pt-3">Project Complete</p>
+            </div>
+          </div>
+          <div
+            class="col-md-4 d-flex align-items-center justify-content-center overview-content"
+          >
+            <div class=" ">
+              <i
+                class="fa-regular fa-calendar-days p-3 fs-2 rounded-4 overview-icon"
+              ></i>
+            </div>
+            <div class="pt-4 ps-5 overview-part-2">
+              <span class="overview-number">28+</span>
+              <p class="overview-text pt-3">Years of Experience</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Overview end here -->
+    <!-- portfolio start here -->
+    <div class="container-fluid portfolio-main pb-5">
+      <div
+        class="container py-5 d-flex justify-content-between align-items-center portfolio-header"
+      >
+        <div class="service-heading-sec py-5">
+          <div>
+            <span class="service-sub-text">
+              || <span class="ps-3">Awesome Portfolio</span></span
+            >
+          </div>
+          <div class="py-4">
+            <span class="service-main-text portfolio-main-text">
+              My Complete Projects
+            </span>
+          </div>
+        </div>
+        <div class="portfolio-dir-btn">
+          <button class="portfolio-btn btn p-4 rounded-circle"><<</button>
+          <button class="portfolio-btn btn p-4 rounded-circle ms-3">>></button>
+        </div>
+      </div>
+      <div class="portfolio-project px-5">
+        <div class="row row-cols-1 row-cols-md-2 g-5">
+          <div class="col">
+            <div
+              class="col portfolio-project-part d-flex justify-content-center pt-5"
+            >
+              <img src="./image/project-1.jpg" class="w-75" alt="" />
+            </div>
+            <div class="pt-5">
+              <p class="project-title">Givest - Non Profit PSD Template</p>
+              <p class="project-title-sub">
+                Chairty / Fund Rising / Non Profit
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="col portfolio-project-part d-flex justify-content-center pt-5"
+            >
+              <img src="./image/project-2.jpg" class="w-75" alt="" />
+            </div>
+            <div class="pt-5 pb-5">
+              <p class="project-title">Musion - Gardening Website Template</p>
+              <p class="project-title-sub">Gardeining Landscaping Greem</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- portfolio end here -->
+    <!-- testemonial stsrt here -->
+    <div class="container-fluid testemonial-main py-5">
+      <div class="container">
+        <div class="service-heading-sec">
+          <div>
+            <span class="service-sub-text">
+              || <span class="ps-3">Testimonial </span></span
+            >
+          </div>
+          <div class="py-4">
+            <span class="service-main-text"> Satisfied Clients Say </span>
+          </div>
+        </div>
+        <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-5 py-5">
+          <div class="col testemonial-part p-5">
+            <i class="fa-solid fa-quote-left fs-1 text-secondary"></i>
+            <p class="testemonial-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium nemo repellat obcaecati officiis eveniet nesciunt, ab
+              sequi.
+            </p>
+            <p class="testemonial-text">Realeigh Friend</p>
+            <div class="text-end">
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star-half-stroke text-warning"></i>
+            </div>
+            <p class="text-secondary">CEO, Seoly</p>
+          </div>
+          <div class="col testemonial-part p-5">
+            <i class="fa-solid fa-quote-left fs-1 text-secondary"></i>
+            <p class="testemonial-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium nemo repellat obcaecati officiis eveniet nesciunt, ab
+              sequi.
+            </p>
+            <p class="testemonial-text">Realeigh Friend</p>
+            <div class="text-end">
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star text-warning"></i>
+              <i class="fa-solid fa-star-half-stroke text-warning"></i>
+            </div>
+            <p class="text-secondary">CEO, Seoly</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- testemonial end here -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
