--- a/index.html
+++ b/index.html
@@ -500,6 +500,125 @@
       </div>
     </div>
     <!-- testemonial end here -->
+    <!-- clients start here -->
+    <div class="container-fluid clients-main py-5">
+      <div class="container">
+        <div class="service-heading-sec mt-5">
+          <div>
+            <span class="service-sub-text">
+              || <span class="ps-3">Favourite Clients </span></span
+            >
+          </div>
+          <div class="py-4">
+            <span class="service-main-text"> Work With Trusted Comapny. </span>
+          </div>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 py-5">
+          <div class="col">
+            <div
+              class="cliants d-flex justify-content-center align-items-center py-5"
+            >
+              <img src="./image/1.webp" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="cliants d-flex justify-content-center align-items-center py-5"
+            >
+              <img src="./image/2.webp" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="cliants d-flex justify-content-center align-items-center py-5"
+            >
+              <img src="./image/3.webp" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="cliants d-flex justify-content-center align-items-center py-5 text-secondary"
+            >
+              <img src="./image/4.webp" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- clients end here -->
+    <!-- Blog Post start here -->
+    <div class="container-fluid blog-post-main py-5">
+      <div class="container py-5">
+        <div class="service-heading-sec text-center pb-5">
+          <div>
+            <span class="service-sub-text">
+              || <span class="ps-3">Blog Post </span></span
+            >
+          </div>
+          <div class="py-4">
+            <span class="service-main-text"> Latest Tips & Tricks </span>
+          </div>
+        </div>
+        <div
+          class="post-main p-5 d-flex align-items-center justify-content-between"
+        >
+          <div>
+            <img src="./image/blog-feed-img-1.webp" class="img-fluid" alt="" />
+          </div>
+          <div class="blog-title">
+            <p class="text-white">
+              Business - <span class="text-secondary">07 February, 2021</span>
+            </p>
+            <p class="fs-4 fw-bold text-white">
+              Don't wait until you officially started <br />
+              business to line these up.
+            </p>
+          </div>
+          <div>
+            <button class="read-more-btn">Read More >></button>
+          </div>
+        </div>
+        <div
+          class="post-main p-5 d-flex align-items-center justify-content-between my-5"
+        >
+          <div>
+            <img src="./image/blog-feed-img-2.webp" class="img-fluid" alt="" />
+          </div>
+          <div class="blog-title">
+            <p class="text-white">
+              Business - <span class="text-secondary">07 February, 2021</span>
+            </p>
+            <p class="fs-4 fw-bold text-white">
+              Don't wait until you officially started <br />
+              business to line these up.
+            </p>
+          </div>
+          <div>
+            <button class="read-more-btn">Read More >></button>
+          </div>
+        </div>
+        <div
+          class="post-main p-5 d-flex align-items-center justify-content-between"
+        >
+          <div>
+            <img src="./image/blog-feed-img-3.webp" class="img-fluid" alt="" />
+          </div>
+          <div class="blog-title">
+            <p class="text-white">
+              Business - <span class="text-secondary">07 February, 2021</span>
+            </p>
+            <p class="fs-4 fw-bold text-white">
+              Don't wait until you officially started <br />
+              business to line these up.
+            </p>
+          </div>
+          <div>
+            <button class="read-more-btn">Read More >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Blog Post end here -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
