--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="./image/logo.webp" alt="" />
         </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-white"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -619,6 +619,52 @@
       </div>
     </div>
     <!-- Blog Post end here -->
+    <!-- newslatter start here -->
+    <div class="container-fluid newslatter-main py-5 text-center">
+      <div class="service-heading-sec text-center pb-5 py-5">
+        <div>
+          <span class="service-sub-text">
+            || <span class="ps-3">Get Latest Updates </span></span
+          >
+        </div>
+        <div class="py-4">
+          <span class="service-main-text"> Subscribe For Newsletter </span>
+        </div>
+      </div>
+      <div class="input py-5">
+        <input
+          type="email"
+          placeholder="demo@youremail.com"
+          class="input-mail"
+        />
+        <button class="subscribe-btn ms-3">Subscribe Now</button>
+      </div>
+      <div class="contact d-flex justify-content-center py-5">
+        <div class="pe-5">
+          <i class="fa-solid fa-phone p-4 rounded-circle contact-iocn"></i>
+          <span class="text-white fs-2 ps-4"> 0123456789</span>
+        </div>
+        <div class="ps-4">
+          <i
+            class="fa-solid fa-envelope-open-text p-4 rounded-circle contact-iocn"
+          ></i>
+          <span class="text-white fs-2 ps-4"> demo@example.com </span>
+        </div>
+      </div>
+    </div>
+    <!-- newslatter end here -->
+    <!-- footer -->
+    <footer class="d-flex align-items-center justify-content-around py-4">
+      <div>
+        <span class="text-white-50"
+          >© 2023 <span class="text-white"> Lendex</span> Made with &#10084; by
+          <span class="text-white">HasThemes</span></span
+        >
+      </div>
+      <div>
+        <img src="./image/logo.webp" alt="" />
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
